Translate ‘Foreword’ as ‘Avant‑propos’
I used a non-breaking hyphen (U+2011) to keep the text on a single
line in the left navigation.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -15,7 +15,7 @@
 
     <nav>
       <ol>
-        <li><a href="index.html" class="active tooltip">•<span>Foreword</span></a></li>
+        <li><a href="index.html" class="active tooltip">•<span>Avant‑propos</span></a></li>
         <li class="sep"><a href="introduction.html" class="tooltip">◦<span>Introduction</span></a></li>
 
         <li><a href="chapter01.html" class="tooltip">◦<span>1&nbsp;&middot;&nbsp;How&nbsp;and&nbsp;Why</span></a></li>
@@ -37,7 +37,7 @@
     </nav>
 
     <article>
-      <h1><span>Foreword</span><br>
+      <h1><span>Avant‑propos</span><br>
       Liz Danzico</h1>
       <p class="first">Frank Chimero and I came together over a shared commitment to jazz. But not only exchanges of music. We emulated the form. He would write a blog post. I would respond. I would improvise one of his hunches. He would iterate one of my posts. A call-and-response approach to a developing friendship.</p>
       <p>We wrote like this alongside one another without ever meeting or speaking directly &ndash; much like many of us: we never meet the people we admire from afar. We read their stories. We watch their videos. We inspect their work. We make up the in-between parts. We improvise. Frank’s stories became my stories, our stories. This book is, partly, about making things out of stories, and using them to help us live well.</p>
