--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -15,7 +15,7 @@
 
     <nav>
       <ol>
-        <li><a href="index.html" class="tooltip">◦<span>Foreword</span></a></li>
+        <li><a href="index.html" class="tooltip">◦<span>Avant‑propos</span></a></li>
         <li class="sep"><a href="introduction.html" class="active tooltip">•<span>Introduction</span></a></li>
 
         <li><a href="chapter01.html" class="tooltip">◦<span>1&nbsp;&middot;&nbsp;How&nbsp;and&nbsp;Why</span></a></li>
