Translate links to next chapter

--- a/book-fr/endnotes.html
+++ b/book-fr/endnotes.html
@@ -120,7 +120,7 @@
 
       <p><em>“The moment just past is extinguished forever…”</em>: Kubler, George. <em>The Shape of Time: Remarks on the History of Things.</em> New Haven: Yale University Press, <span class="osf">1962</span>.</p>
 
-      <a href="acknowledgements.html" class="continue">Continue to Acknowledgements</a>
+      <a href="acknowledgements.html" class="continue">Suite de la lecture avec les remerciements</a>
     </article>
 
     <footer>
