--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -47,7 +47,7 @@
       <p>First, design is imagining a future and working toward it with intelligence and cleverness. We use design to close the gap between the situation we have and the one we desire. Second, design is a practice built upon making things for other people. We are all on the road together. These two things dictate our relationship to the world and our bond to one another. They form the foundations of the design practice, so our work should revolve around these truths.</p>
       <p>The practice, simply, is a way of thinking and moving that we use to enhance life. It is available to anyone. We listen to our song, watch how things move, imagine the arrangement, then act. We dance together backwards into the future, giving influence and taking it, forming and being formed. This is dance of eternity, and the shape of design. I hope to see you singing on the road.</p>
 
-      <a href="chapter01.html" class="continue">Continue to Chapter One</a>
+      <a href="chapter01.html" class="continue">Suite de la lecture au chapitre un</a>
     </article>
 
     <footer>
