Translate ‘Acknowledgements’ as ‘Remerciements’

--- a/book-fr/acknowledgements.html
+++ b/book-fr/acknowledgements.html
@@ -32,12 +32,12 @@
         <li class="sep"><a href="chapter10.html" class="tooltip">◦<span>10&nbsp;&middot;&nbsp;Gifts&nbsp;and&nbsp;Giving</span></a></li>
 
         <li><a href="endnotes.html" class="tooltip">◦<span>Endnotes</span></a></li>
-        <li><a href="acknowledgements.html" class="active tooltip">•<span>Acknowledgements</span></a></li>
+        <li><a href="acknowledgements.html" class="active tooltip">•<span>Remerciements</span></a></li>
       </ol>
     </nav>
 
     <article class="ack">
-      <h1>Acknowledgements</h1>
+      <h1>Remerciements</h1>
       <p class="first">I began thinking seriously about this book in November of <span class="osf">2010</span>, shortly after completing a lecture of the same name at the Build conference in Belfast, Northern Ireland. The talk was warmly received, but I perceived there was more to the ideas I presented. They required further investigation and thought. It took four months to muster up the courage to begin writing, but a year and a half later, I feel as if my search is concluding.</p>
 
       <p>A sincere thank you goes to those who joined me in the search party. David Cole, Liz Danzico, Rob Giampietro, Craig Mod, Jason Santa Maria, and Andy McMillan all read early versions of the manuscript and offered instrumental feedback. The book is better from their ideas, support, and friendship.</p>
