Translate ‘Endnotes’ as ‘Notes de fin’

--- a/book-fr/endnotes.html
+++ b/book-fr/endnotes.html
@@ -31,14 +31,14 @@
         <li><a href="chapter09.html" class="tooltip">◦<span>9&nbsp;&middot;&nbsp;Delight&nbsp;and&nbsp;Accommodation</span></a></li>
         <li class="sep"><a href="chapter10.html" class="tooltip">◦<span>10&nbsp;&middot;&nbsp;Gifts&nbsp;and&nbsp;Giving</span></a></li>
 
-        <li><a href="endnotes.html" class="active tooltip">•<span>Endnotes</span></a></li>
+        <li><a href="endnotes.html" class="active tooltip">•<span>Notes&nbsp;de&nbsp;fin</span></a></li>
         <li><a href="acknowledgements.html" class="tooltip">◦<span>Remerciements</span></a></li>
       </ol>
     </nav>
 
 
     <article class="endnotes">
-      <h1 id="heading_id_2">Endnotes</h1>
+      <h1 id="heading_id_2">Notes de fin</h1>
 
       <h2 id="heading_id_3">Introduction</h2>
 
