Translate ‘Chapter *’ in all pages

--- a/book-fr/endnotes.html
+++ b/book-fr/endnotes.html
@@ -44,7 +44,7 @@
 
       <p><em>“march backwards into the future”</em>: McLuhan, Marshall, Quentin Fiore. <em>The Medium Is the Massage.</em> New York, London, Toronto: Random House, <span class="osf">1967</span>.</p>
 
-      <h2 id="heading_id_4">Chapter One</h2>
+      <h2 id="heading_id_4">Chapitre un</h2>
 
       <p><em>“…a more beautiful question”</em>: Cummings, E.E. <em>Collected Poems [of] E. E. Cummings.</em> Harcourt, Brace and Company, <span class="osf">1928</span>.</p>
 
@@ -54,19 +54,19 @@
 
       <p><em>“aired its final episode of Reading Rainbow”</em>: Calhoun, Ben. <a href="http://www.npr.org/templates/story/story.php?storyId=112312561"><span>“Reading Rainbow Reaches Its Final Chapter.”</span></a> <span class="osf"><em>NPR.</em> NPR, 28</span> Aug. <span class="osf">2009</span>. Web. <span class="osf">02</span> Apr. <span class="osf">2012</span>.</p>
 
-      <h2 id="heading_id_5">Chapter Two</h2>
+      <h2 id="heading_id_5">Chapitre deux</h2>
 
       <p><em>“A sunflower seed…”</em>: Flanders, John. <em>The Craftsman’s Way</em>: Canadian Expressions. Toronto: University of Toronto, <span class="osf">1981</span>.</p>
 
       <p><em>“pheromones of the master’s own breath.”</em>: Watson, Lyall. <em>The Nature of Things: The Secret Life of Inanimate Objects.</em> London: Hodder &amp; Stoughton, <span class="osf">1990</span>.</p>
 
-      <h2 id="heading_id_6">Chapter Three</h2>
+      <h2 id="heading_id_6">Chapitre trois</h2>
 
       <p><em>“I'll play first…”</em>: <a href="http://www.youtube.com/watch?v=R1CwXz8Xidc"><span><em>Miles Davis Honda Scooter Ad.</em></span></a> Perf. Miles Davis. Commercial. YouTube. <span class="osf">1</span> Feb. <span class="osf">2008</span>. Web. <span class="osf">8</span> Apr. <span class="osf">2012</span>.</p>
 
       <p><em>“Lighting one candle…”</em>: Hass, Robert, Basho Matsuo, Buson Yosa, and Issa Kobayashi. <em>The Essential Haiku: Versions of Basho, Buson, and Issa.</em> Hopewell, nj: Ecco, <span class="osf">1994</span>.</p>
 
-      <h2 id="heading_id_7">Chapter Four</h2>
+      <h2 id="heading_id_7">Chapitre quatre</h2>
 
       <p><em>“…putting form and content together.”</em>: Blumenthal, Saul. <a href="http://tech.mit.edu/V116/N59/paulrand.59n.html"><span>“Designer Paul Rand Speaks at Media Lab.”</span></a> <em>The Tech.</em> Massachusetts Institute of Technology, <span class="osf">15</span> Nov. <span class="osf">1996</span>. Web. <span class="osf">02</span> Apr. <span class="osf">2012</span>.</p>
 
@@ -74,29 +74,29 @@
 
       <p>Johnson, Steven. <em>Where Good Ideas Come From: The Natural History of Innovation.</em> New York: Riverhead, <span class="osf">2010</span>.</p>
 
-      <h2 id="heading_id_8">Chapter Five</h2>
+      <h2 id="heading_id_8">Chapitre cinq</h2>
 
       <p><em>“the world as it will be…”</em>: Asimov, Isaac. <em>Asimov on Science Fiction.</em> Garden City, NY: Doubleday, <span class="osf">1981</span>.</p>
 
-      <h2 id="heading_id_9">Chapter Six</h2>
+      <h2 id="heading_id_9">Chapitre six</h2>
 
       <p><em>“We sail within a vast sphere ”</em>: Pascal, Blaise. <a href="http://www.gutenberg.org/files/18269/18269-h/18269-h.htm#p_72"><span><em>Pascal's Pensées.</em></span></a> Project Gutenberg. <span class="osf">27</span> Apr. <span class="osf">2006</span>. Web. <span class="osf">8</span> Apr. <span class="osf">2012</span>. </p>
 
       <p><em>“…the right solution would presently announce itself.”</em>: Weschler, Lawrence, and Robert Irwin. <em>Seeing Is Forgetting the Name of the Thing One Sees: A Life of Contemporary Artist Robert Irwin.</em> Berkeley: University of California, <span class="osf">1982</span>.</p>
 
-      <h2 id="heading_id_10">Chapter Seven</h2>
+      <h2 id="heading_id_10">Chapitre sept</h2>
 
       <p><em>“Draw your chair up close…”</em>: Fitzgerald, F. Scott, and Edmund Wilson. <em>The Crack-Up.</em> New York: J. Laughlin, <span class="osf">1945</span>.</p>
 
-      <h2 id="heading_id_11">Chapter Eight</h2>
+      <h2 id="heading_id_11">Chapitre huit</h2>
 
       <p><em>“…you will contribute a verse.”</em>: From the poem <em>O Me! O Life!</em> Whitman, Walt. <em>Leaves of Grass.</em> New York, NY: HarperCollins, <span class="osf">2000</span>.</p>
 
-      <h2 id="heading_id_12">Chapter Nine</h2>
+      <h2 id="heading_id_12">Chapitre neuf</h2>
 
       <p><em>“Whoever said that pleasure…”</em>: <a href="http://www.youtube.com/watch?v=3xYi2rd1QCg"><span><em>Design Q&amp;A with Charles Eames.</em></span></a> Perf. Charles Eames. YouTube. Web.</p>
 
-      <h2 id="heading_id_13">Chapter Ten</h2>
+      <h2 id="heading_id_13">Chapitre dix</h2>
 
       <p><em>“Not I, not I…”</em>: From the poem <em>Song of a Man Who Has Come Through.</em> Lawrence, D. H. <em>The Complete Poems.</em> New York: Penguin, <span class="osf">1971</span>.</p>
 
