--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -39,17 +39,130 @@
     <article>
       <h1><span>Avant‑propos</span><br>
       Liz Danzico</h1>
-      <p class="first">Frank Chimero and I came together over a shared commitment to jazz. But not only exchanges of music. We emulated the form. He would write a blog post. I would respond. I would improvise one of his hunches. He would iterate one of my posts. A call-and-response approach to a developing friendship.</p>
-      <p>We wrote like this alongside one another without ever meeting or speaking directly &ndash; much like many of us: we never meet the people we admire from afar. We read their stories. We watch their videos. We inspect their work. We make up the in-between parts. We improvise. Frank’s stories became my stories, our stories. This book is, partly, about making things out of stories, and using them to help us live well.</p>
-      <p>Without warning one day, a mail from Frank appeared in my inbox, introducing himself:</p>
-      <blockquote>You know what I love about jazz and improvisation? It’s all process. <span class="osf">100%.</span> The essence of it is the process, every time is different, and to truly partake in it, you have to visit a place to see it in progress. Every jazz club or improv comedy theater is a temple to the process of production. It’s a factory, and the art is the assembly, not the product. Jazz is more verb than noun. And in a world riddled with a feeling of inertia, I want to find a verb and hold on to it for dear life.</blockquote>
-      <p>My conversations with Frank began to draw a line between the adjacent systems in the world and our own design process. Jazz. Tools. Art. Pizza. Announce a noun, and Frank helps trace its mutable shape to something more active. A verb! The adjacent process.</p>
-      <p>Deciphering and designing these systems is hard work. Done well, and one gets there “the long, hard, stupid way,” as Frank frames it in the pages to come, nodding to the gap between efficiency and the extra effort that compels us to make things with pride and compassion. Our process will vary, but steeling ourselves to persist is what Frank gives us the tools to do.</p>
-      <p>In that way, this book is not unlike a more ubiquitous tool and platform, the U.S. Interstate Highway System. Today, we take it for granted, mostly, but its numbering system at one point had to be designed. At a time when telephone poles lined dirt trails, Bureau of Public Roads employee Edwin W. James and committee were asked to come up with a more expandable system as roads were growing in the <span class="osf">1920</span>s. They designed what we know today as the Interstate Numbering System. Prior to that, people relied on color codes for direction. Telephone poles ringed with color bands lined highways, corresponding to individual dirt trails across the country. As trails expanded, telephone poles became painted from the ground up, sometimes fifteen feet high, so trying to distinguish among colors became dangerous.</p>
-      <p>E. W. James changed that. He decided that motorists would be able to figure out where they were at any time given the intersection of any two highways. North / south highways would be numbered with odd numbers; east / west with even numbers; and numbers would increase as you go east and north. The Interstate Numbering System was designed for expansion, anticipating the future contributions of people, cities, unexpectedness. It’s a tool. It’s a platform. And it’s still not done nearly <span class="osf">100</span> years later.</p>
-      <p>If you wish to use this book as a tool, by all means, put it down at any time. Leave the road. You will find your way back as the intersection of two points will serve as your guide. Then wander back. This is the point of any road or system after all: to take you to a destination in a time in need. Or, consider the book as a platform and musical score: respond to a passage, to a chapter. Consider Frank’s call your opportunity to respond, and each sentence your opportunity to create. That is the reason they were written.</p>
-      <p>I’m honored to say that since that original mail, there have been many Frank mails in my inbox. Later:</p>
-      <blockquote>I see a platform and it tells me two things: first, other people’s contributions are important. Second, the world is not done. Wow. If I want to believe anything, it’s that.</blockquote>
+      <p class="first">
+        Frank Chimero and I came together over a shared commitment to jazz.
+        But not only exchanges of music.
+        We emulated the form.
+        He would write a blog post.
+        I would respond.
+        I would improvise one of his hunches.
+        He would iterate one of my posts.
+        A call-and-response approach to a developing friendship.
+      </p>
+      <p>
+        We wrote like this alongside one another
+        without ever meeting or speaking directly
+        &ndash; much like many of us:
+        we never meet the people we admire from afar.
+        We read their stories.
+        We watch their videos.
+        We inspect their work.
+        We make up the in-between parts.
+        We improvise.
+        Frank’s stories became my stories, our stories.
+        This book is, partly, about making things out of stories,
+        and using them to help us live well.
+      </p>
+      <p>
+        Without warning one day,
+        a mail from Frank appeared in my inbox,
+        introducing himself:
+      </p>
+      <blockquote>
+        You know what I love about jazz and improvisation?
+        It’s all process.
+        <span class="osf">100%.</span>
+        The essence of it is the process,
+        every time is different,
+        and to truly partake in it,
+        you have to visit a place to see it in progress.
+        Every jazz club or improv comedy theater
+        is a temple to the process of production.
+        It’s a factory,
+        and the art is the assembly, not the product.
+        Jazz is more verb than noun.
+        And in a world riddled with a feeling of inertia,
+        I want to find a verb and hold on to it for dear life.
+      </blockquote>
+      <p>
+        My conversations with Frank began to draw a line
+        between the adjacent systems in the world
+        and our own design process.
+        Jazz. Tools. Art. Pizza.
+        Announce a noun,
+        and Frank helps trace its mutable shape to something more active.
+        A verb! The adjacent process.
+      </p>
+      <p>
+        Deciphering and designing these systems is hard work.
+        Done well, and one gets there “the long, hard, stupid way,”
+        as Frank frames it in the pages to come,
+        nodding to the gap between efficiency and the extra effort
+        that compels us to make things with pride and compassion.
+        Our process will vary, but steeling ourselves to persist
+        is what Frank gives us the tools to do.
+      </p>
+      <p>
+        In that way, this book is not unlike a more ubiquitous tool
+        and platform, the U.S. Interstate Highway System.
+        Today, we take it for granted, mostly,
+        but its numbering system at one point had to be designed.
+        At a time when telephone poles lined dirt trails,
+        Bureau of Public Roads employee Edwin W. James
+        and committee were asked to come up with a more expandable system
+        as roads were growing in the <span class="osf">1920</span>s.
+        They designed what we know today as the Interstate Numbering System.
+        Prior to that, people relied on color codes for direction.
+        Telephone poles ringed with color bands lined highways,
+        corresponding to individual dirt trails across the country.
+        As trails expanded, telephone poles became painted from the ground up,
+        sometimes fifteen feet high,
+        so trying to distinguish among colors became dangerous.
+      </p>
+      <p>
+        E. W. James changed that.
+        He decided that motorists would be able to figure out
+        where they were at any time
+        given the intersection of any two highways.
+        North / south highways would be numbered with odd numbers;
+        east / west with even numbers;
+        and numbers would increase as you go east and north.
+        The Interstate Numbering System was designed for expansion,
+        anticipating the future contributions of people, cities,
+        unexpectedness.
+        It’s a tool.
+        It’s a platform.
+        And it’s still not done
+        nearly <span class="osf">100</span> years later.
+      </p>
+      <p>
+        If you wish to use this book as a tool,
+        by all means,
+        put it down at any time.
+        Leave the road.
+        You will find your way back
+        as the intersection of two points will serve as your guide.
+        Then wander back.
+        This is the point of any road or system after all:
+        to take you to a destination in a time in need.
+        Or, consider the book as a platform and musical score:
+        respond to a passage, to a chapter.
+        Consider Frank’s call your opportunity to respond,
+        and each sentence your opportunity to create.
+        That is the reason they were written.
+      </p>
+      <p>
+        I’m honored to say that since that original mail,
+        there have been many Frank mails in my inbox.
+        Later:
+      </p>
+      <blockquote>
+        I see a platform and it tells me two things:
+        first, other people’s contributions are important.
+        Second, the world is not done.
+        Wow.
+        If I want to believe anything, it’s that.
+      </blockquote>
       <p>Start improvising.</p>
 
       <a href="introduction.html" class="continue">Suite de la lecture avec l'introduction</a>
