Translate first paragraph of foreword
Note: call-and-response is a musical form
Reference: http://en.wikipedia.org/wiki/Call-and-response

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -40,14 +40,40 @@
       <h1><span>Avant‑propos</span><br>
       Liz Danzico</h1>
       <p class="first">
-        Frank Chimero and I came together over a shared commitment to jazz.
+        <!--
+        Frank Chimero and I
+        came together over a shared commitment to jazz.
+        -->
+        Frank Chimero et moi,
+        c'est une passion partagée pour le jazz qui nous a rapprochés.
+        <!--
         But not only exchanges of music.
+        -->
+        Mais pas seulement des échanges de musique.
+        <!--
         We emulated the form.
+        -->
+        Nous en reproduisions la forme.
+        <!--
         He would write a blog post.
+        -->
+        Il écrivait un article de blog.
+        <!--
         I would respond.
+        -->
+        Je répondais.
+        <!--
         I would improvise one of his hunches.
+        -->
+        J'improvisais sur l'une de ses intuitions.
+        <!--
         He would iterate one of my posts.
+        -->
+        Il répétait l'un de mes articles.
+        <!--
         A call-and-response approach to a developing friendship.
+        -->
+        Notre amitié s'est développée suivant cette forme d'appel et réponse.
       </p>
       <p>
         We wrote like this alongside one another
