Translate foreword up to introduction email

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -76,39 +76,134 @@
         Notre amitié s'est développée suivant cette forme d'appel et réponse.
       </p>
       <p>
+        <!--
         We wrote like this alongside one another
+        -->
+        Nous avons écrit ainsi l'un à côté de l'autre
+        <!--
         without ever meeting or speaking directly
+        -->
+        sans jamais nous rencontrer ou nous parler directement
+        <!--
         &ndash; much like many of us:
+        -->
+        &ndash; comme beaucoup d'entre nous :
+        <!--
         we never meet the people we admire from afar.
+        -->
+        nous ne rencontrons jamais les gens que nous admirons de loin.
+        <!--
         We read their stories.
+        -->
+        Nous lisons leurs histoires.
+        <!--
         We watch their videos.
+        -->
+        Nous regardons leurs vidéos.
+        <!--
         We inspect their work.
+        -->
+        Nous inspectons leur travail.
+        <!--
         We make up the in-between parts.
+        -->
+        Nous inventons les entre-deux.
+        <!--
         We improvise.
+        -->
+        Nous improvisons.
+        <!--
         Frank’s stories became my stories, our stories.
-        This book is, partly, about making things out of stories,
+        -->
+        Les histoires de Frank devinrent mes histoires, nos histoires.
+        <!--
+        This book is, partly,
+        -->
+        Le propos de ce livre est, en partie,
+        <!--
+        about making things out of stories,
+        -->
+        comment créer des choses à partir d'histoires,
+        <!--
         and using them to help us live well.
+        -->
+        et comment les utiliser pour nous aider à vivre mieux.
       </p>
       <p>
+        <!--
         Without warning one day,
+        -->
+        Un jour, sans prévenir,
+        <!--
         a mail from Frank appeared in my inbox,
+        -->
+        un email de Frank est apparu dans ma boîte de réception,
+        <!--
         introducing himself:
+        -->
+        où il se présentait ainsi :
       </p>
       <blockquote>
+        <!--
         You know what I love about jazz and improvisation?
+        -->
+        Tu sais ce que j'aime dans le jazz et l'improvisation ?
+        <!--
         It’s all process.
+        -->
+        Tout est dans le processus.
+        <!--
         <span class="osf">100%.</span>
+        -->
+        <span class="osf">100%.</span>
+        <!--
         The essence of it is the process,
+        -->
+        Leur essence est le processus,
+        <!--
         every time is different,
+        -->
+        changeant à chaque fois,
+        <!--
         and to truly partake in it,
+        -->
+        et y prendre part, pour de vrai,
+        <!--
         you have to visit a place to see it in progress.
+        -->
+        nécessite de se déplacer pour le voir prendre place.
+        <!--
         Every jazz club or improv comedy theater
+        -->
+        Tous les clubs de jazz et les théâtres d'impro
+        <!--
         is a temple to the process of production.
+        -->
+        sont des templates de ce processus de production.
+        <!--
         It’s a factory,
+        -->
+        Ce sont des usines,
+        <!--
         and the art is the assembly, not the product.
+        -->
+        et l'art est dans l'assemblage, pas dans le produit.
+        <!--
         Jazz is more verb than noun.
+        -->
+        Le mot anglais “jazz” est plus verbe que nom.
+        <!--
         And in a world riddled with a feeling of inertia,
-        I want to find a verb and hold on to it for dear life.
+        -->
+        Et dans ce monde qu'un sentiment d'inertie traverse de part en part,
+        <!--
+        I want to find a verb
+        -->
+        je veux trouver un verbe
+        <!--
+        and hold on to it for dear life.
+        -->
+        et m'y accrocher comme à une bouée de sauvetage.
       </blockquote>
       <p>
         My conversations with Frank began to draw a line
