Translate paragraph about adjacent systems in foreword
I translated 'adjacent' in this context as 'à l'interface de',
using as reference the presentation of 'Adjacent Systems' in
the context of the analysis of requirements [1].

[1] Adjacent Systems
http://my.safaribooksonline.com/book/software-engineering-and-development/software-requirements/0321419499/project-blastoff/ch03lev2sec20

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -206,13 +206,36 @@
         et m'y accrocher comme à une bouée de sauvetage.
       </blockquote>
       <p>
+        <!--
         My conversations with Frank began to draw a line
-        between the adjacent systems in the world
-        and our own design process.
+        -->
+        Mes conversations avec Frank ont commencé à tracer une ligne
+        <!--
+        between the adjacent systems
+        -->
+        à l'interface entre les systèmes
+        <!--
+        in the world and our own design process.
+        -->
+        dans le monde et nos propres processus de création.
+        <!--
         Jazz. Tools. Art. Pizza.
+        -->
+        Jazz. Outils. Art. Pizza.
+        <!--
         Announce a noun,
-        and Frank helps trace its mutable shape to something more active.
+        -->
+        Présentez lui un nom,
+        <!--
+        and Frank helps trace
+        its mutable shape to something more active.
+        -->
+        et Frank vous aide à trouver la trace
+        du principe actif capable d'en modifier la forme.
+        <!--
         A verb! The adjacent process.
+        -->
+        Un verbe ! Le processus à l'interface du système.
       </p>
       <p>
         Deciphering and designing these systems is hard work.
