Translate one more paragraph in foreword.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -238,13 +238,35 @@
         Un verbe ! Le processus à l'interface du système.
       </p>
       <p>
+        <!--
         Deciphering and designing these systems is hard work.
+        -->
+        Déchiffrer et concevoir ces systèmes est un travail difficile.
+        <!--
         Done well, and one gets there “the long, hard, stupid way,”
+        -->
+        Un travail bien fait, et il faut pour y parvenir emprunter
+        «&nbsp;durement et bêtement le chemin le plus long&nbsp;»,
+        <!--
         as Frank frames it in the pages to come,
+        -->
+        selon l'argument que Frank construit dans les pages qui suivent,
+        <!--
         nodding to the gap between efficiency and the extra effort
+        -->
+        qui affirme l'écart entre l'efficacité et l'effort supplémentaire
+        <!--
         that compels us to make things with pride and compassion.
-        Our process will vary, but steeling ourselves to persist
-        is what Frank gives us the tools to do.
+        -->
+        qui nous pousse à faire les choses avec fierté et compassion.
+        <!--
+        Our process will vary,
+        but steeling ourselves to persist is
+        what Frank gives us the tools to do.
+        -->
+        Frank nous donne les outils pour construire
+        une armure qui nous protège pour persister
+        alors que nos processus fluctuent.
       </p>
       <p>
         In that way, this book is not unlike a more ubiquitous tool
