Use singular with essence, referring to jazz

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -159,7 +159,7 @@
         <!--
         The essence of it is the process,
         -->
-        Leur essence est le processus,
+        Son essence est le processus,
         <!--
         every time is different,
         -->
