Agree 'changeante' with 'essence' rather than 'processus'
This makes the visual image better.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -163,7 +163,7 @@
         <!--
         every time is different,
         -->
-        changeant à chaque fois,
+        changeante à chaque fois,
         <!--
         and to truly partake in it,
         -->
