Replace wrong word 'templates' with 'temples'

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -179,7 +179,7 @@
         <!--
         is a temple to the process of production.
         -->
-        sont des templates de ce processus de production.
+        sont des temples de ce processus de production.
         <!--
         It’s a factory,
         -->
