Put emphasis on the essence of jazz
The new wording conveys the image of distillation, a long process
to extract the essence.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -167,11 +167,11 @@
         <!--
         and to truly partake in it,
         -->
-        et y prendre part, pour de vrai,
+        et pour s'en imprégner,
         <!--
         you have to visit a place to see it in progress.
         -->
-        nécessite de se déplacer pour le voir prendre place.
+        il faut se rendre sur place pour l'observer en cours d'élaboration.
         <!--
         Every jazz club or improv comedy theater
         -->
