Enhance the flow of the sentence about tools to steel ourselves

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -265,7 +265,7 @@
         what Frank gives us the tools to do.
         -->
         Frank nous donne les outils pour construire
-        une armure qui nous protège pour persister
+        notre armure de protection et persister
         alors que nos processus fluctuent.
       </p>
       <p>
