Explicit 'efficiency' as 'recherche d'efficacité'
... rather than just 'efficacité'.

It is not only the result that matters, but the process,
as highlighted in the surrounding discussion.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -252,13 +252,17 @@
         -->
         selon l'argument que Frank construit dans les pages qui suivent,
         <!--
-        nodding to the gap between efficiency and the extra effort
+        nodding to the gap between efficiency
         -->
-        qui affirme l'écart entre l'efficacité et l'effort supplémentaire
+        qui affirme l'écart entre la recherche d'efficacité
         <!--
-        that compels us to make things with pride and compassion.
+        and the extra effort that compels us
         -->
-        qui nous pousse à faire les choses avec fierté et compassion.
+        et l'effort supplémentaire qui nous pousse
+        <!--
+        to make things with pride and compassion.
+        -->
+        à faire les choses avec fierté et compassion.
         <!--
         Our process will vary,
         but steeling ourselves to persist is
