Translate paragraphs about the Interstate Numbering System

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -273,37 +273,157 @@
         alors que nos processus fluctuent.
       </p>
       <p>
-        In that way, this book is not unlike a more ubiquitous tool
-        and platform, the U.S. Interstate Highway System.
+        <!--
+        In that way, this book is not unlike
+        -->
+        En ce sens, ce livre n'est pas sans similitude avec
+        <!--
+        a more ubiquitous tool and platform,
+        -->
+        un outil omniprésent et une plateforme,
+        <!--
+        the U.S. Interstate Highway System.
+        -->
+        le système des autoroutes fédérales des États-Unis
+        (U.S. Interstate Highway System).
+        <!--
         Today, we take it for granted, mostly,
         but its numbering system at one point had to be designed.
-        At a time when telephone poles lined dirt trails,
+        -->
+        S'il va de soi de nos jours, ou pratiquement,
+        il fut un temps où son système de numérotation restait à inventer.
+        <!--
+        At a time when telephone poles
+        -->
+        A une époque où les poteaux téléphoniques
+        <!--
+        lined dirt trails,
+        -->
+        s'alignaient le long de pistes de terre,
+        <!--
         Bureau of Public Roads employee Edwin W. James
-        and committee were asked to come up with a more expandable system
-        as roads were growing in the <span class="osf">1920</span>s.
+        -->
+        Edwin W. James, employé du bureau de la voirie
+        (Bureau of Public Roads)
+        <!--
+        and committee were asked to come up with
+        -->
+        fut chargé d'établir, au sein d'un comité,
+        <!--
+        a more expandable system
+        -->
+        un système plus flexible capable de s'adapter
+        <!--
+        as roads were growing
+        -->
+        à la croissance du réseau routier
+        <!--
+        in the <span class="osf">1920</span>s.
+        -->
+        dans les années <span class="osf">1920</span>.
+        <!--
         They designed what we know today as the Interstate Numbering System.
+        -->
+        Ils ont créé le système de numérotation des autoroutes fédérales
+        connu aujourd'hui sous le nom de Interstate Numbering System.
+        <!--
         Prior to that, people relied on color codes for direction.
+        -->
+        Jusqu'alors, c'étaient des codes de couleur qui donnaient la direction.
+        <!--
         Telephone poles ringed with color bands lined highways,
         corresponding to individual dirt trails across the country.
-        As trails expanded, telephone poles became painted from the ground up,
+        -->
+        A travers le pays,
+        chacune des pistes de terre correspondait à un anneau de couleur
+        sur les poteaux téléphoniques alignés le long des autoroutes.
+        <!--
+        As trails expanded, telephone poles
+        -->
+        Avec l'expansion des pistes, les poteaux téléphoniques
+        <!--
+        became painted from the ground up,
+        -->
+        se sont retrouvés peints à partir du sol,
+        <!--
         sometimes fifteen feet high,
-        so trying to distinguish among colors became dangerous.
+        -->
+        parfois jusqu'à cinq mètres de hauteur,
+        <!--
+        so trying to distinguish among colors
+        -->
+        ainsi essayer de distinguer les différentes couleurs
+        <!--
+        became dangerous.
+        -->
+        était devenu hasardeux.
       </p>
       <p>
+        <!--
         E. W. James changed that.
-        He decided that motorists would be able to figure out
-        where they were at any time
+        -->
+        E. W. James a changé tout ça.
+        <!--
+        He decided that motorists would be able
+        -->
+        Il décida que les automobilistes seraient capables
+        <!--
+        to figure out where they were at any time
+        -->
+        de comprendre où ils se trouvaient à tout moment
+        <!--
         given the intersection of any two highways.
-        North / south highways would be numbered with odd numbers;
+        -->
+        à partir de l'intersection de deux autoroutes quelconques.
+        <!--
+        North / south highways
+        -->
+        Les autoroutes du nord au sud
+        <!--
+        would be numbered with odd numbers;
+        -->
+        seraient numérotées avec des numéros impairs ;
+        <!--
         east / west with even numbers;
-        and numbers would increase as you go east and north.
+        -->
+        celles d'est en ouest avec des numéros pairs ;
+        <!--
+        and numbers would increase
+        -->
+        et les numéros augmenteraient
+        <!--
+        as you go east and north.
+        -->
+        en allant vers l'est et vers le nord.
+        <!--
         The Interstate Numbering System was designed for expansion,
+        -->
+        L'expansion du système de numérotation des autoroutes fédérales
+        a été prévue dès sa création,
+        <!--
         anticipating the future contributions of people, cities,
+        -->
+        prévoyant les contributions futures des gens, des villes,
+        <!--
         unexpectedness.
+        -->
+        l'imprévu.
+        <!--
         It’s a tool.
+        -->
+        C'est un outil.
+        <!--
         It’s a platform.
+        -->
+        C'est une plateforme.
+        <!--
         And it’s still not done
+        -->
+        Et ce n'est toujours pas terminé
+        <!--
         nearly <span class="osf">100</span> years later.
+        -->
+        presque <span class="osf">100</span> ans plus tard.
       </p>
       <p>
         If you wish to use this book as a tool,
