Replace redundant 'prévoyant' with 'en anticipant'
The synonym is also closer to the English text 'anticipating'.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -403,7 +403,7 @@
         <!--
         anticipating the future contributions of people, cities,
         -->
-        prévoyant les contributions futures des gens, des villes,
+        en anticipant les contributions futures des gens, des villes,
         <!--
         unexpectedness.
         -->
