Complete translation of foreword

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -426,34 +426,106 @@
         presque <span class="osf">100</span> ans plus tard.
       </p>
       <p>
+        <!--
         If you wish to use this book as a tool,
+        -->
+        Si vous souhaitez utiliser ce livre comme un outil,
+        <!--
         by all means,
+        -->
+        alors n'hésitez pas,
+        <!--
         put it down at any time.
+        -->
+        posez le à n'importe quel moment.
+        <!--
         Leave the road.
+        -->
+        Quittez la route.
+        <!--
         You will find your way back
+        -->
+        Vous retrouverez votre chemin
+        <!--
         as the intersection of two points will serve as your guide.
+        -->
+        car l'intersection de deux points vous servira de guide.
+        <!--
         Then wander back.
+        -->
+        Ensuite promenez-vous en revenant.
+        <!--
         This is the point of any road or system after all:
+        -->
+        Après tout, tel est le but de toutes les routes et les systèmes :
+        <!--
         to take you to a destination in a time in need.
+        -->
+        vous amener à une destination lorsque que vous en avez besoin.
+        <!--
         Or, consider the book as a platform and musical score:
+        -->
+        Ou alors, considérez ce livre comme une plateforme
+        et une partition musicale :
+        <!--
         respond to a passage, to a chapter.
+        -->
+        répondez à un passage, à un chapitre.
+        <!--
         Consider Frank’s call your opportunity to respond,
+        -->
+        Considérez l'appel de Frank comme votre opportunité pour répondre,
+        <!--
         and each sentence your opportunity to create.
+        -->
+        et chaque phrase comme votre opportunité pour créer.
+        <!--
         That is the reason they were written.
+        -->
+        Voilà la raison pour laquelle elles ont été écrites.
       </p>
       <p>
+        <!--
         I’m honored to say that since that original mail,
+        -->
+        Je suis fière de dire que depuis cet email initial,
+        <!--
         there have been many Frank mails in my inbox.
+        -->
+        il y a eu de nombreux emails de Frank dans ma boîte de réception.
+        <!--
         Later:
+        -->
+        Plus tard :
       </p>
       <blockquote>
+        <!--
         I see a platform and it tells me two things:
+        -->
+        Je vois une plateforme et elle me dit deux choses :
+        <!--
         first, other people’s contributions are important.
+        -->
+        d'une part, les contributions des autres personnes sont importantes.
+        <!--
         Second, the world is not done.
+        -->
+        D'autre part, le monde n'est pas terminé.
+        <!--
         Wow.
+        -->
+        Waouh.
+        <!--
         If I want to believe anything, it’s that.
+        -->
+        S'il y a quelque chose en quoi je veux croire, c'est bien ça.
       </blockquote>
-      <p>Start improvising.</p>
+      <p>
+        <!--
+        Start improvising.
+        -->
+        Commencez à improviser.
+      </p>
 
       <a href="introduction.html" class="continue">Suite de la lecture avec l'introduction</a>
     </article>
