Translate first paragraph of introduction

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -40,24 +40,90 @@
     <article>
       <h1>Introduction</h1>
       <p class="first">
+        <!--
         What is the marker of good design?
+        -->
+        A quoi reconnaît-on une bonne création ?
+        <!--
         It moves.
+        -->
+        Elle remue.
+        <!--
         The story of a successful piece of design
+        -->
+        L'histoire d'une création réussie
+        <!--
         begins with the movement of its maker
+        -->
+        commence avec le mouvement de son créateur
+        <!--
         while it is being made,
+        -->
+        pendant qu'elle est en cours de fabrication,
+        <!--
         and amplifies by its publishing,
+        -->
+        et s'amplifie par sa publication,
+        <!--
         moving the work out and around.
-        It then continues in the feeling the work stirs in the audience
+        -->
+        qui fait sortir l'œuvre en ballade.
+        <!--
+        It then continues in the feeling
+        -->
+        Elle se prolonge ensuite dans le sentiment
+        <!--
+        the work stirs in the audience
+        -->
+        que l'œuvre suscite chez tous ceux
+        <!--
         when they see, use, or contribute to the work,
-        and intensifies as the audience passes it on to others.
+        -->
+        qui la voient, l'utilisent, ou y contribuent,
+        <!--
+        and intensifies
+        -->
+        et s'intensifie
+        <!--
+        as the audience passes it on to others.
+        -->
+        lorsque cette audience transmet l'œuvre à d'autres.
+        <!--
         Design gains value as it moves from hand to hand;
+        -->
+        La création prend de la valeur en passant de main en main ;
+        <!--
         context to context;
+        -->
+        de contexte en contexte ;
+        <!--
         need to need.
+        -->
+        de besoin en besoin.
+        <!--
         If all of this movement harmonizes,
+        -->
+        Lorsque tous ces mouvements s'harmonisent,
+        <!--
         the work gains a life of its own,
+        -->
+        l'œuvre prend vie
+        <!--
         and turns into a shared experience
-        that enhances life and inches the world
+        -->
+        et devient une expérience partagée
+        <!--
+        that enhances life
+        -->
+        qui rend notre vie meilleure
+        <!--
+        and inches the world
+        -->
+        et amène lentement le monde
+        <!--
         closer to its full potential.
+        -->
+        à réaliser tout son potentiel.
       </p>
       <p>
         The designer is tasked to loosely organize and arrange this movement.
