Straighten out French in first paragraph of foreword
I am rereading the French text to appreciate it on its own,
straightening out the sharp angles that make it look translated
rather than said in natural French.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -46,11 +46,11 @@
         came together over a shared commitment to jazz.
         -->
         Frank Chimero et moi,
-        c'est une passion partagée pour le jazz qui nous a rapprochés.
+        c'est notre passion commune pour le jazz qui nous a rapprochés.
         <!--
         But not only exchanges of music.
         -->
-        Mais pas seulement des échanges de musique.
+        Mais pas seulement par des échanges de musique.
         <!--
         We emulated the form.
         -->
@@ -62,7 +62,7 @@
         <!--
         I would respond.
         -->
-        Je répondais.
+        Je lui répondais.
         <!--
         I would improvise one of his hunches.
         -->
