Remove ambiguity of "l'un à côté de l'autre" for "alongside"
There was an apparent contradiction to writing side by side without meeting.
I clarified by replacing with "en parallèle" (in parallel) which keeps
the idea.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -80,7 +80,7 @@
         <!--
         We wrote like this alongside one another
         -->
-        Nous avons écrit ainsi l'un à côté de l'autre
+        Nous avons écrit ainsi en parallèle
         <!--
         without ever meeting or speaking directly
         -->
