Replace en dash with punctuation more common in French
I removed the introducing dash and replaced the colon with a semicolon,
to convey the same idea.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -84,11 +84,11 @@
         <!--
         without ever meeting or speaking directly
         -->
-        sans jamais nous rencontrer ou nous parler directement
+        sans jamais nous rencontrer ou nous parler directement.
         <!--
         &ndash; much like many of us:
         -->
-        &ndash; comme beaucoup d'entre nous :
+        Comme beaucoup d'entre nous ;
         <!--
         we never meet the people we admire from afar.
         -->
