Emphasize call and response with punctuation in first paragraph
I replace periods with semicolons to associate the call and response
written as two separate sentences in English. This is in line with
the changes of punctuation that I just made in the next paragraph.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -58,19 +58,19 @@
         <!--
         He would write a blog post.
         -->
-        Il écrivait un article de blog.
+        Il écrivait un article de blog ;
         <!--
         I would respond.
         -->
-        Je lui répondais.
+        je lui répondais.
         <!--
         I would improvise one of his hunches.
         -->
-        J'improvisais sur l'une de ses intuitions.
+        J'improvisais sur l'une de ses intuitions ;
         <!--
         He would iterate one of my posts.
         -->
-        Il répétait l'un de mes articles.
+        il répétait l'un de mes articles.
         <!--
         A call-and-response approach to a developing friendship.
         -->
