Translate iterate as "reprenait" instead of "répétait"
This is closer to the musical term of "reprise", for a repeated part.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -70,7 +70,7 @@
         <!--
         He would iterate one of my posts.
         -->
-        il répétait l'un de mes articles.
+        il reprenait l'un de mes articles.
         <!--
         A call-and-response approach to a developing friendship.
         -->
