Translate "inspect" as "examinons" instead of "inspectons"
This is more friendly/scientific, less industrial/military.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -104,7 +104,7 @@
         <!--
         We inspect their work.
         -->
-        Nous inspectons leur travail.
+        Nous examinons leur travail.
         <!--
         We make up the in-between parts.
         -->
